Drawer's no longer touch the body tag and have their own mask
Drawer is just a dumb component with a show and hide method.
The drawer component now contains the existing drawer as a child as well
as a mask omponent which covers the screen and when clicked hides the
drawer. This means that they are not tied to the Minerva mask that is
used for other purposes and that the component itself doesn't need to
reach out and touch the body tag.

All known drawers have been updated to be compatible with this change -
red link drawer, block drawer and ctas.

Bug: T214049
Bug: T214647

--- a/resources/mobile.startup/Drawer.less
+++ b/resources/mobile.startup/Drawer.less
@@ -59,3 +59,18 @@
 		display: none !important;
 	}
 }
+
+.drawer-container__mask {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba( 0, 0, 0, 0.8 );
+	transition: opacity 100ms ease-in-out;
+	opacity: 0;
+
+	&--visible {
+		opacity: 0.2;
+	}
+}
